--- a/05_TrainModel.ipynb
+++ b/05_TrainModel.ipynb
@@ -27,7 +27,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "625edb97-7657-4230-c25e-f50705bfb07b"
+        "outputId": "e93e24f2-f50f-4fea-e53a-c90c496dc127"
       },
       "outputs": [
         {
@@ -499,12 +499,12 @@
         "test.head()"
       ],
       "metadata": {
-        "id": "sSFGXGso7iro",
-        "outputId": "ce8a7ae8-5bbd-4c71-922d-fa383fdd2a83",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 418
-        }
+        },
+        "id": "sSFGXGso7iro",
+        "outputId": "ce8a7ae8-5bbd-4c71-922d-fa383fdd2a83"
       },
       "execution_count": 11,
       "outputs": [
@@ -961,14 +961,29 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# get importance\n",
+        "importance = model.feature_importances_\n",
+        "# summarize feature importance\n",
+        "for i,v in enumerate(importance):\n",
+        "\tprint('Feature: %0d, Score: %.5f' % (i,v))"
+      ],
+      "metadata": {
+        "id": "slfy6uhoHzWS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": 36,
       "metadata": {
         "id": "grZw_xPljWN3",
-        "outputId": "f06f2016-f21e-49a5-da5c-08e6d3dff3a7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
-        }
+        },
+        "outputId": "f06f2016-f21e-49a5-da5c-08e6d3dff3a7"
       },
       "outputs": [
         {
