--- a/05_TrainModel.ipynb
+++ b/05_TrainModel.ipynb
@@ -417,17 +417,6 @@
     {
       "cell_type": "code",
       "source": [
-        "#df.set_index(\"DATE1\", inplace = True)"
-      ],
-      "metadata": {
-        "id": "YPBKMGQhyOU4"
-      },
-      "execution_count": 70,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "print(\"number of records:\", len(df))"
       ],
       "metadata": {
@@ -486,6 +475,7 @@
       "cell_type": "code",
       "source": [
         "# Use this if DATE1 is defined as index\n",
+        "#df.set_index(\"DATE1\", inplace = True)\n",
         "#train = df.loc[df.index.get_level_values('DATE1') < '2022-01-01'] # df.index.get_level_values('DATE1').dayofweek == 0\n",
         "#test = df.loc[df.index.get_level_values('DATE1') >= '2022-01-01']\n",
         "#print(len(train), ' + ', len(test), ' = ',len(df), \", that is :\", f'{len(train)/len(df):0.2%}', ' of data allocated for model training')"
