--- a/05_TrainModel.ipynb
+++ b/05_TrainModel.ipynb
@@ -21,13 +21,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 1,
       "metadata": {
         "id": "xCiQK9EymKri",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "47a8adcc-cbc5-4eb1-ead8-954ab9afb66e"
+        "outputId": "7abcc881-4e6f-4071-c6fb-526b2c2eed1e"
       },
       "outputs": [
         {
@@ -53,12 +53,12 @@
       "metadata": {
         "id": "vFgtZTRq63k5"
       },
-      "execution_count": 49,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 3,
       "metadata": {
         "id": "h2LQvqXbpQpx"
       },
@@ -68,7 +68,7 @@
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
         "import xgboost as xgb\n",
-        "from sklearn.metrics import mean_squared_error\n",
+        "from sklearn.metrics import mean_squared_error, accuracy_score\n",
         "import pickle"
       ]
     },
@@ -92,19 +92,19 @@
       "metadata": {
         "id": "vrDDwi4cywry"
       },
-      "execution_count": 51,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 5,
       "metadata": {
         "id": "bSn40j76mKrz",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 386
         },
-        "outputId": "b1011432-9cad-4aae-94c8-d69610fd9332"
+        "outputId": "e2d779c9-89ce-4134-9ca9-7db0a6632e28"
       },
       "outputs": [
         {
@@ -157,7 +157,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-f72041d0-dec9-4e2e-849e-b885ebb16179\">\n",
+              "  <div id=\"df-69040ba5-dfc9-438d-b7b5-9e00e522c2fc\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -325,7 +325,7 @@
               "</table>\n",
               "<p>5 rows × 24 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f72041d0-dec9-4e2e-849e-b885ebb16179')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-69040ba5-dfc9-438d-b7b5-9e00e522c2fc')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -376,12 +376,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-f72041d0-dec9-4e2e-849e-b885ebb16179 button.colab-df-convert');\n",
+              "          document.querySelector('#df-69040ba5-dfc9-438d-b7b5-9e00e522c2fc button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-f72041d0-dec9-4e2e-849e-b885ebb16179');\n",
+              "          const element = document.querySelector('#df-69040ba5-dfc9-438d-b7b5-9e00e522c2fc');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -404,7 +404,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 52
+          "execution_count": 5
         }
       ],
       "source": [
@@ -424,9 +424,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "01ed5e99-6f79-48c0-dd13-4cc6b8225116"
+        "outputId": "8342f296-2770-466a-a4fd-37a3db62fa2d"
       },
-      "execution_count": 53,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -458,9 +458,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "88GrjqIyWn24",
-        "outputId": "c94a3f02-2832-4f38-d019-cc37e13b5f02"
+        "outputId": "50e7a268-cc15-4eb6-c43d-7a31ff81e8f4"
       },
-      "execution_count": 54,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -499,13 +499,13 @@
       ],
       "metadata": {
         "id": "v4U_82wW3UlI",
-        "outputId": "a5721976-9f71-4561-88e9-70a0ff4f60d2",
+        "outputId": "0bfc50b2-20e5-4b69-ed11-004d3dbae87d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 288
         }
       },
-      "execution_count": 55,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
@@ -540,9 +540,9 @@
           "height": 288
         },
         "id": "AhXLY-uFX9r4",
-        "outputId": "431bc557-f685-4126-9893-c1adf3551b0a"
+        "outputId": "8043b449-b0fe-44e8-d457-7150e0cb7b68"
       },
-      "execution_count": 56,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
@@ -569,7 +569,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 10,
       "metadata": {
         "id": "2Sk4ZPY7jARj"
       },
@@ -589,7 +589,9 @@
     {
       "cell_type": "code",
       "source": [
-        "model = xgb.XGBRegressor(base_score=0.5, booster='gbtree',    \n",
+        "model = xgb.XGBRegressor(base_score=0.5, booster='gbtree', \n",
+        "                         min_child_weight=1,\n",
+        "                         random_state=5,   \n",
         "                       n_estimators=1000,\n",
         "                       early_stopping_rounds=50,\n",
         "                       objective='reg:squarederror', # instead of 'reg:linear' that is deprecated \n",
@@ -599,18 +601,18 @@
       "metadata": {
         "id": "p0xnlAFsyWR1"
       },
-      "execution_count": 58,
+      "execution_count": 11,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 12,
       "metadata": {
         "id": "zaanp2MajIIa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e2fdcb8f-e763-4afa-b4f2-a28a93cf1118"
+        "outputId": "e8e0cb0c-02de-4ecd-ab8c-1e02f236b2bd"
       },
       "outputs": [
         {
@@ -635,17 +637,139 @@
           "data": {
             "text/plain": [
               "XGBRegressor(early_stopping_rounds=50, learning_rate=0.01, n_estimators=1000,\n",
-              "             objective='reg:squarederror')"
+              "             objective='reg:squarederror', random_state=5)"
             ]
           },
           "metadata": {},
-          "execution_count": 59
+          "execution_count": 12
         }
       ],
       "source": [
         "model.fit(X_train, y_train,\n",
         "        eval_set=[(X_train, y_train), (X_test, y_test)],\n",
         "        verbose=100)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test = test.drop(columns=['prediction'])"
+      ],
+      "metadata": {
+        "id": "cFeK7Btw7MYf"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test['prediction'] = model.predict(X_test)"
+      ],
+      "metadata": {
+        "id": "C-uDKAwR6b-R"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Model RMSE score**"
+      ],
+      "metadata": {
+        "id": "SdOK7GoZ9DVP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "score = np.sqrt(mean_squared_error(test['QTY'], test['prediction']))\n",
+        "print(f'RMSE Score on Test set: {score:0.2f}')"
+      ],
+      "metadata": {
+        "id": "R1ubNx7j6Otg",
+        "outputId": "6c78f39d-8f61-416d-d9bc-4ada0640a2cd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "RMSE Score on Test set: 4.78\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Calculate Error**"
+      ],
+      "metadata": {
+        "id": "ZSq-bik29ode"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Look at the worst and best prediction days"
+      ],
+      "metadata": {
+        "id": "NxG61cuo8-MS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test['error'] = np.abs(test[TARGET] - test['prediction'])\n",
+        "test['date'] = test['DATE1']\n",
+        "test.groupby(['date'])['error'].mean().sort_values(ascending=False).head(20)"
+      ],
+      "metadata": {
+        "id": "fumU_Jxi6sBL",
+        "outputId": "977487c2-349d-46bf-c67c-b1bbc93cdcb0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "date\n",
+              "2022-05-01    12.383084\n",
+              "2022-04-30     9.617967\n",
+              "2022-04-29     8.913256\n",
+              "2022-07-08     7.379810\n",
+              "2022-04-24     7.117672\n",
+              "2022-06-04     5.696013\n",
+              "2022-02-26     5.194367\n",
+              "2022-01-02     5.021267\n",
+              "2022-05-14     4.944590\n",
+              "2022-05-28     4.941024\n",
+              "2022-02-19     4.884658\n",
+              "2022-01-15     4.854317\n",
+              "2022-01-29     4.848681\n",
+              "2022-05-21     4.774922\n",
+              "2022-07-18     4.755848\n",
+              "2022-06-11     4.656752\n",
+              "2022-07-21     4.644515\n",
+              "2022-06-25     4.615840\n",
+              "2022-01-22     4.521991\n",
+              "2022-07-17     4.492775\n",
+              "Name: error, dtype: float64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
       ]
     },
     {
@@ -690,12 +814,12 @@
       ],
       "metadata": {
         "id": "slfy6uhoHzWS",
-        "outputId": "47e173cd-15f7-4b6c-e632-37dcbd176b09",
+        "outputId": "b5591b35-ceee-4b40-92bb-18dd3961a650",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 60,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -715,14 +839,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 26,
       "metadata": {
         "id": "grZw_xPljWN3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
         },
-        "outputId": "57fa0b18-26dc-4af8-8bda-863a14023e6c"
+        "outputId": "f64ea284-021f-4f89-f53a-c934dce1cf6f"
       },
       "outputs": [
         {
@@ -758,28 +882,6 @@
     {
       "cell_type": "code",
       "source": [
-        "test = test.drop(columns=['prediction'])"
-      ],
-      "metadata": {
-        "id": "YUe0-61b0KpO"
-      },
-      "execution_count": 64,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "test['prediction'] = model.predict(X_test)"
-      ],
-      "metadata": {
-        "id": "76EiX8UN7xxV"
-      },
-      "execution_count": 65,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "fig, ax = plt.subplots(figsize=(25, 5))\n",
         "plt.plot(test['DATE1'], test['QTY'], label='Historical Data')\n",
         "plt.plot(test['DATE1'], test['prediction'], label='Predicted Data')\n",
@@ -795,7 +897,7 @@
           "height": 285
         }
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1328,7 +1430,7 @@
       "metadata": {
         "id": "EKGPQ12taIB7"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1350,7 +1452,7 @@
           "height": 288
         }
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1382,7 +1484,7 @@
           "height": 513
         }
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1406,7 +1508,7 @@
       "metadata": {
         "id": "tsG6fhP6qocV"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1428,7 +1530,7 @@
           "height": 290
         }
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1460,7 +1562,7 @@
           "height": 463
         }
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1484,7 +1586,7 @@
       "metadata": {
         "id": "3JTYmKgxqXXy"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1506,7 +1608,7 @@
           "height": 290
         }
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1520,90 +1622,6 @@
             "needs_background": "light"
           }
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "KUCE9GbUj0aX"
-      },
-      "source": [
-        "**Score (RMSE)**"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 77,
-      "metadata": {
-        "id": "RzXkkmxRj4Jg",
-        "outputId": "92322b1e-d6da-4301-c1c5-12bc662981c0",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "RMSE Score on Test set: 4.78\n"
-          ]
-        }
-      ],
-      "source": [
-        "score = np.sqrt(mean_squared_error(test['QTY'], test['prediction']))\n",
-        "print(f'RMSE Score on Test set: {score:0.2f}')"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Y8AN_o2lkRR2"
-      },
-      "source": [
-        "**Calculate Error**\n",
-        "\n",
-        "\n",
-        "*   Look at the worst and best predicted days"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 78,
-      "metadata": {
-        "id": "eDrIFpBTke8J",
-        "outputId": "6d4fa6e9-7dab-4345-cfa1-6db82d733d12",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "date\n",
-              "2022-05-01    12.383084\n",
-              "2022-04-30     9.617967\n",
-              "2022-04-29     8.913256\n",
-              "2022-07-08     7.379810\n",
-              "2022-04-24     7.117672\n",
-              "2022-06-04     5.696013\n",
-              "2022-02-26     5.194367\n",
-              "2022-01-02     5.021267\n",
-              "2022-05-14     4.944590\n",
-              "2022-05-28     4.941024\n",
-              "Name: error, dtype: float64"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 78
-        }
-      ],
-      "source": [
-        "test['error'] = np.abs(test[TARGET] - test['prediction'])\n",
-        "test['date'] = test['DATE1']\n",
-        "test.groupby(['date'])['error'].mean().sort_values(ascending=False).head(10)"
       ]
     }
   ],
