--- a/05_TrainModel.ipynb
+++ b/05_TrainModel.ipynb
@@ -58,7 +58,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 49,
       "metadata": {
         "id": "h2LQvqXbpQpx"
       },
@@ -68,7 +68,7 @@
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
         "import xgboost as xgb\n",
-        "from sklearn.metrics import mean_squared_error, accuracy_score\n",
+        "from sklearn.metrics import mean_squared_error, explained_variance_score, r2_score, median_absolute_error\n",
         "import pickle"
       ]
     },
@@ -688,11 +688,11 @@
         "print(f'RMSE Score on Test set: {score:0.2f}')"
       ],
       "metadata": {
-        "id": "R1ubNx7j6Otg",
-        "outputId": "6c78f39d-8f61-416d-d9bc-4ada0640a2cd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "R1ubNx7j6Otg",
+        "outputId": "6c78f39d-8f61-416d-d9bc-4ada0640a2cd"
       },
       "execution_count": 23,
       "outputs": [
@@ -702,6 +702,84 @@
           "text": [
             "RMSE Score on Test set: 4.78\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "explained_variance_score(test['QTY'], test['prediction']) # Best possible score is 1.0, lower values are worse"
+      ],
+      "metadata": {
+        "id": "sGrvSA96AL0V",
+        "outputId": "a2b80726-855d-4bf1-ed98-932d9ba10236",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.1255981178444826"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "r2_score(test['QTY'], test['prediction']) # 1.0 perfect, 0 impperfect"
+      ],
+      "metadata": {
+        "id": "MXHXYrsbArx7",
+        "outputId": "ac84beeb-4f39-4847-c22c-8480671aa8e3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-0.12160612611633881"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 48
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "median_absolute_error(test['QTY'], test['prediction']) # Best value is zero"
+      ],
+      "metadata": {
+        "id": "h7cqsgzXBXfV",
+        "outputId": "0a348909-5469-405c-c786-7f3c966cf606",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2.8148305416107178"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 50
         }
       ]
     },
@@ -731,11 +809,11 @@
         "test.groupby(['date'])['error'].mean().sort_values(ascending=False).head(20)"
       ],
       "metadata": {
-        "id": "fumU_Jxi6sBL",
-        "outputId": "977487c2-349d-46bf-c67c-b1bbc93cdcb0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fumU_Jxi6sBL",
+        "outputId": "977487c2-349d-46bf-c67c-b1bbc93cdcb0"
       },
       "execution_count": 29,
       "outputs": [
