--- a/05_TrainModel.ipynb
+++ b/05_TrainModel.ipynb
@@ -27,7 +27,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3ec850bf-d120-481c-a74f-fe96d08c2df3"
+        "outputId": "c7e9602e-775d-4aaf-bdd8-61d0bc30cf93"
       },
       "outputs": [
         {
@@ -104,7 +104,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 386
         },
-        "outputId": "e034c432-198d-4a17-c9a1-8481ecf31c9c"
+        "outputId": "d35c5b4a-d454-4e33-8fe4-14ca3d181cb0"
       },
       "outputs": [
         {
@@ -157,7 +157,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-83ebb504-37fa-4be5-a88b-559fc2be502a\">\n",
+              "  <div id=\"df-0b6b0b83-6391-46b7-b547-353390a211cc\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -325,7 +325,7 @@
               "</table>\n",
               "<p>5 rows × 24 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-83ebb504-37fa-4be5-a88b-559fc2be502a')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0b6b0b83-6391-46b7-b547-353390a211cc')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -376,12 +376,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-83ebb504-37fa-4be5-a88b-559fc2be502a button.colab-df-convert');\n",
+              "          document.querySelector('#df-0b6b0b83-6391-46b7-b547-353390a211cc button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-83ebb504-37fa-4be5-a88b-559fc2be502a');\n",
+              "          const element = document.querySelector('#df-0b6b0b83-6391-46b7-b547-353390a211cc');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -426,7 +426,7 @@
         },
         "outputId": "9283376e-d7a9-4c40-dda1-00fd55295c2f"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -458,9 +458,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "88GrjqIyWn24",
-        "outputId": "1ec6a69e-2c11-45fe-f7e5-d15dc8781bb6"
+        "outputId": "4af476eb-c94a-4987-f6f9-f77522380e55"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -499,13 +499,13 @@
       ],
       "metadata": {
         "id": "v4U_82wW3UlI",
-        "outputId": "0190776f-3434-43ca-ac23-64557fb0ee57",
+        "outputId": "61707405-bc64-4638-c544-bb6a9ec1f9ef",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 266
         }
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "display_data",
@@ -540,9 +540,9 @@
           "height": 266
         },
         "id": "AhXLY-uFX9r4",
-        "outputId": "293ef0a8-393b-4d76-d387-f19aae39d98e"
+        "outputId": "670e1de1-f272-4d33-e1e8-fa32334f2ae2"
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
@@ -569,7 +569,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 9,
       "metadata": {
         "id": "2Sk4ZPY7jARj"
       },
@@ -601,18 +601,18 @@
       "metadata": {
         "id": "p0xnlAFsyWR1"
       },
-      "execution_count": 11,
+      "execution_count": 19,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 20,
       "metadata": {
         "id": "zaanp2MajIIa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f5f4dfa3-6ccf-4f4b-9776-2c7d2bf1a2a2"
+        "outputId": "c30763a0-96df-41e2-f9ec-14af677c982b"
       },
       "outputs": [
         {
@@ -642,7 +642,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 20
         }
       ],
       "source": [
@@ -657,32 +657,10 @@
         "test = test.drop(columns=['prediction'])"
       ],
       "metadata": {
-        "id": "cFeK7Btw7MYf",
-        "outputId": "88c08218-44da-4d57-dc9b-3cf3bd16bdc1",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 312
-        }
+        "id": "cFeK7Btw7MYf"
       },
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "KeyError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-14-546e7612a483>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'prediction'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/pandas/util/_decorators.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    309\u001b[0m                     \u001b[0mstacklevel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstacklevel\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    310\u001b[0m                 )\n\u001b[0;32m--> 311\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    312\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    313\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36mdrop\u001b[0;34m(self, labels, axis, index, columns, level, inplace, errors)\u001b[0m\n\u001b[1;32m   4911\u001b[0m             \u001b[0mlevel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlevel\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4912\u001b[0m             \u001b[0minplace\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minplace\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4913\u001b[0;31m             \u001b[0merrors\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0merrors\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4914\u001b[0m         )\n\u001b[1;32m   4915\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36mdrop\u001b[0;34m(self, labels, axis, index, columns, level, inplace, errors)\u001b[0m\n\u001b[1;32m   4148\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m \u001b[0;32min\u001b[0m \u001b[0maxes\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4149\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mlabels\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4150\u001b[0;31m                 \u001b[0mobj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_drop_axis\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlevel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlevel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merrors\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0merrors\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4151\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4152\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0minplace\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m_drop_axis\u001b[0;34m(self, labels, axis, level, errors)\u001b[0m\n\u001b[1;32m   4183\u001b[0m                 \u001b[0mnew_axis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlevel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlevel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merrors\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0merrors\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4184\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4185\u001b[0;31m                 \u001b[0mnew_axis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merrors\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0merrors\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4186\u001b[0m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreindex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0maxis_name\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mnew_axis\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4187\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mdrop\u001b[0;34m(self, labels, errors)\u001b[0m\n\u001b[1;32m   6015\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mmask\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0many\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   6016\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0merrors\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m\"ignore\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 6017\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"{labels[mask]} not found in axis\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   6018\u001b[0m             \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mindexer\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m~\u001b[0m\u001b[0mmask\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   6019\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdelete\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyError\u001b[0m: \"['prediction'] not found in axis\""
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -691,12 +669,12 @@
       ],
       "metadata": {
         "id": "C-uDKAwR6b-R",
-        "outputId": "879e98ab-d0b4-479c-f48f-e33f2cdec40e",
+        "outputId": "cc25991d-9eea-4ecf-c2b3-8b17eee41822",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -732,9 +710,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "R1ubNx7j6Otg",
-        "outputId": "8a86c1f2-787d-46f6-b20b-169ea1a2827d"
+        "outputId": "014449c1-717e-497b-ee6b-240dd49486b0"
       },
-      "execution_count": 16,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -755,9 +733,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sGrvSA96AL0V",
-        "outputId": "15cb7141-f066-4a8a-c217-4bd6b6194e68"
+        "outputId": "6432c518-e87b-478f-87bc-751ed68a4777"
       },
-      "execution_count": 17,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -767,7 +745,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 24
         }
       ]
     },
@@ -781,9 +759,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MXHXYrsbArx7",
-        "outputId": "fe35611b-6c05-4f84-cae6-15f8a5aef7e0"
+        "outputId": "6800281d-5ce9-42fb-f583-c245d161c2e9"
       },
-      "execution_count": 18,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -793,7 +771,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 25
         }
       ]
     },
@@ -807,9 +785,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "h7cqsgzXBXfV",
-        "outputId": "4e21d958-ff8a-4524-bd63-dc396f3e140d"
+        "outputId": "1a2b9197-af34-45ec-8c00-727519bedc1c"
       },
-      "execution_count": 19,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -819,7 +797,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 26
         }
       ]
     },
@@ -853,40 +831,58 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fumU_Jxi6sBL",
-        "outputId": "a4253afe-6f83-43ae-c8ab-11cfb5d0896a"
+        "outputId": "c0698e98-4adb-4b17-b77e-db6770cf00dd"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  \"\"\"Entry point for launching an IPython kernel.\n",
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  \n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "date\n",
-              "2022-05-01    16.429448\n",
-              "2022-07-08     8.595166\n",
-              "2022-04-30     7.478843\n",
-              "2022-04-29     6.872819\n",
-              "2022-05-03     4.616639\n",
-              "2022-04-28     3.905787\n",
-              "2022-01-28     3.544768\n",
-              "2022-05-07     3.458606\n",
-              "2022-02-11     3.353968\n",
-              "2022-04-22     3.247298\n",
-              "2022-05-05     3.196831\n",
-              "2022-01-01     3.164574\n",
-              "2022-03-31     3.084025\n",
-              "2022-03-13     3.065413\n",
-              "2022-03-15     3.004587\n",
-              "2022-05-04     2.994523\n",
-              "2022-03-11     2.979890\n",
-              "2022-04-26     2.906998\n",
-              "2022-03-25     2.906879\n",
-              "2022-01-12     2.896503\n",
+              "2022-05-01    15.659534\n",
+              "2022-04-30     8.536978\n",
+              "2022-07-08     8.526124\n",
+              "2022-04-29     7.689111\n",
+              "2022-05-03     4.953055\n",
+              "2022-04-28     3.924989\n",
+              "2022-04-26     3.629765\n",
+              "2022-04-24     3.274265\n",
+              "2022-05-04     3.251368\n",
+              "2022-01-01     3.147841\n",
+              "2022-01-28     3.057261\n",
+              "2022-04-25     2.985593\n",
+              "2022-06-04     2.877497\n",
+              "2022-02-11     2.838373\n",
+              "2022-02-26     2.829301\n",
+              "2022-03-31     2.719991\n",
+              "2022-05-07     2.700931\n",
+              "2022-04-27     2.690326\n",
+              "2022-05-05     2.682016\n",
+              "2022-02-12     2.671765\n",
               "Name: error, dtype: float64"
             ]
           },
           "metadata": {},
-          "execution_count": 69
+          "execution_count": 27
         }
       ]
     },
@@ -908,7 +904,7 @@
       "metadata": {
         "id": "WedLXfCHxdqX"
       },
-      "execution_count": 20,
+      "execution_count": 28,
       "outputs": []
     },
     {
