--- a/02_MergeDataFrames.ipynb
+++ b/02_MergeDataFrames.ipynb
@@ -21,13 +21,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "xCiQK9EymKri",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "12f72e93-6efd-453a-f747-c425fee3682c"
+        "outputId": "4eebb69d-1906-4d26-f3bf-02fec976e9d7"
       },
       "outputs": [
         {
@@ -54,7 +54,7 @@
       "metadata": {
         "id": "vFgtZTRq63k5"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -77,7 +77,7 @@
       "metadata": {
         "id": "vrDDwi4cywry"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -92,9 +92,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a1e57284-366b-44f4-8c27-d1552d26f259"
+        "outputId": "e01cc836-cf98-43cc-c6a0-203ae59428bc"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -117,9 +117,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QsVShyePhWHi",
-        "outputId": "c0f5f346-3a78-4ca4-907a-143855020f05"
+        "outputId": "0924dd2c-e548-434c-bee1-d9ac50f30d95"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -142,9 +142,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "C085MZFIhYu-",
-        "outputId": "9cfbecc4-b538-42f1-e959-64452a5f72ee"
+        "outputId": "260c7cdd-ba74-4646-9316-a58af312ad17"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -167,9 +167,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TADafPfchaq2",
-        "outputId": "4e485dbc-9a36-4de6-9118-f3d553a8db06"
+        "outputId": "0e52bdf7-cd48-4ec5-98a1-3d061fa926ef"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,37 +183,25 @@
     {
       "cell_type": "code",
       "source": [
-        "with open(path + '20161718Sales.pk', 'rb') as f:\n",
-        "  data20161718 = pickle.load(f)\n",
-        "print(\"number of records:\", len(data20161718))"
+        "#with open(path + '20161718Sales.pk', 'rb') as f:\n",
+        "#  data20161718 = pickle.load(f)\n",
+        "#print(\"number of records:\", len(data20161718))"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "5Xnx-QGyhdYd",
-        "outputId": "3c416452-3dbe-477e-8e07-f958306b2462"
+        "id": "5Xnx-QGyhdYd"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "number of records: 1252038\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "frames = [data2022, data2021, data2020, data2019, data20161718]"
+        "frames = [data2022, data2021, data2020, data2019]"
       ],
       "metadata": {
         "id": "jdlhMz0GhgSj"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -227,15 +215,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qCM2WIKuiDty",
-        "outputId": "e3556bfe-b864-4dec-f63e-99b715ed7d8e"
+        "outputId": "e302589a-e968-46d4-8911-90af6bc8dd07"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "number of records: 7288431\n"
+            "number of records: 6036393\n"
           ]
         }
       ]
@@ -251,9 +239,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
-        "outputId": "71fde1ad-4770-4ce5-d5fd-78144e4583b1"
+        "outputId": "b76893f9-6851-47b4-d904-6193caa9afa0"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -268,7 +256,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a9a10c92-eeee-4cd7-bc72-f0f978222492\">\n",
+              "  <div id=\"df-98bc74e2-6632-468c-8a27-ca16eac4fb09\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -345,7 +333,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a9a10c92-eeee-4cd7-bc72-f0f978222492')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-98bc74e2-6632-468c-8a27-ca16eac4fb09')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -396,12 +384,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-a9a10c92-eeee-4cd7-bc72-f0f978222492 button.colab-df-convert');\n",
+              "          document.querySelector('#df-98bc74e2-6632-468c-8a27-ca16eac4fb09 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-a9a10c92-eeee-4cd7-bc72-f0f978222492');\n",
+              "          const element = document.querySelector('#df-98bc74e2-6632-468c-8a27-ca16eac4fb09');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -424,7 +412,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 11
         }
       ]
     },
@@ -440,35 +428,24 @@
     {
       "cell_type": "code",
       "source": [
-        "path_generated = \"/content/drive/MyDrive/ColabNotebooks/dataset/02_ProcessedData/\""
+        "path = \"/content/drive/MyDrive/ColabNotebooks/dataset/05_TrainedModel/\""
       ],
       "metadata": {
         "id": "OQuLIn2ijnIG"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "with open(path_generated + 'data.pk', 'wb') as f:\n",
+        "with open(path + 'data.pk', 'wb') as f:\n",
         "  pickle.dump(data, f)"
       ],
       "metadata": {
         "id": "YptRks025UF0"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "tmfxBXmd_Xvx"
-      },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     }
   ],
