--- a/02_MergeDataFrames.ipynb
+++ b/02_MergeDataFrames.ipynb
@@ -27,7 +27,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4eebb69d-1906-4d26-f3bf-02fec976e9d7"
+        "outputId": "abdb8ae9-9b14-476f-fd46-1ab1c86ea623"
       },
       "outputs": [
         {
@@ -92,7 +92,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e01cc836-cf98-43cc-c6a0-203ae59428bc"
+        "outputId": "cda8b7c1-c6ff-4d4b-d20f-0b04c5649c3d"
       },
       "execution_count": 4,
       "outputs": [
@@ -117,7 +117,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QsVShyePhWHi",
-        "outputId": "0924dd2c-e548-434c-bee1-d9ac50f30d95"
+        "outputId": "6e77d5ad-3635-4dac-b1ef-9435713e2e03"
       },
       "execution_count": 5,
       "outputs": [
@@ -142,7 +142,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "C085MZFIhYu-",
-        "outputId": "260c7cdd-ba74-4646-9316-a58af312ad17"
+        "outputId": "c6ffde52-fcda-42d2-df19-d20c7cf36d10"
       },
       "execution_count": 6,
       "outputs": [
@@ -167,7 +167,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TADafPfchaq2",
-        "outputId": "0e52bdf7-cd48-4ec5-98a1-3d061fa926ef"
+        "outputId": "f5ee70b5-a967-4139-db3c-9cc169723b59"
       },
       "execution_count": 7,
       "outputs": [
@@ -201,7 +201,7 @@
       "metadata": {
         "id": "jdlhMz0GhgSj"
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -215,9 +215,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qCM2WIKuiDty",
-        "outputId": "e302589a-e968-46d4-8911-90af6bc8dd07"
+        "outputId": "115af5c1-684a-4d78-fb00-7da9560c1896"
       },
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -225,6 +225,49 @@
           "text": [
             "number of records: 6036393\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#data[['SLS_CNTR_ID']] = data[['SLS_CNTR_ID']].astype(int, errors = 'raise')"
+      ],
+      "metadata": {
+        "id": "I-39eKo34Tj8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data.dtypes"
+      ],
+      "metadata": {
+        "id": "_Z6P1TQo3yZN",
+        "outputId": "4842de32-310f-4bd1-9ce1-aed726520f47",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "ITEM_ID                object\n",
+              "SLS_CNTR_ID             int64\n",
+              "DATE1          datetime64[ns]\n",
+              "QTY                   float64\n",
+              "TTL_VAL               float64\n",
+              "TTL_CST               float64\n",
+              "dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
         }
       ]
     },
