--- a/07_PredictFuture.ipynb
+++ b/07_PredictFuture.ipynb
@@ -263,48 +263,21 @@
         "df['Weekday'] = df['DATE1'].apply(lambda dt: dt.dayofweek)\n",
         "df['weekofyear'] = df['DATE1'].apply(lambda dt: dt.week)\n",
         "df['month'] = df['DATE1'].apply(lambda dt: dt.month)\n",
-        "df['quarter'] = df['DATE1'].apply(lambda dt: dt.quarter)"
-      ],
-      "metadata": {
-        "id": "YbZRtuWonlI-"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "df['quarter'] = df['DATE1'].apply(lambda dt: dt.quarter)\n",
+        "\n",
         "df['isSalaryweek'] = df['DATE1'].apply(lambda dt: isSalaryweek(dt))\n",
         "df['isWeekend'] = df['DATE1'].apply(lambda dt: isWeekend(dt))\n",
-        "df['isNationalday'] = df['DATE1'].apply(lambda dt: isNationalday(dt))"
-      ],
-      "metadata": {
-        "id": "LtDIWnzQn24g"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "df['isNationalday'] = df['DATE1'].apply(lambda dt: isNationalday(dt))\n",
+        "\n",
         "df['hijri'] = df.apply(lambda row: hijriDate(row), axis=1)\n",
         "df['isRamadan'] = df['hijri'].apply(lambda dt: isRamadan(dt))\n",
         "df['isRamadanEnd'] = df['hijri'].apply(lambda dt: isRamadanEnd(dt))\n",
-        "df['isEid'] = df['hijri'].apply(lambda dt: isEid(dt))"
-      ],
-      "metadata": {
-        "id": "qbQzOzrfoHRS"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "df['isEid'] = df['hijri'].apply(lambda dt: isEid(dt))\n",
+        "\n",
         "df = df.drop(columns=['hijri'])"
       ],
       "metadata": {
-        "id": "BcMsMdi4oUAe"
+        "id": "YbZRtuWonlI-"
       },
       "execution_count": null,
       "outputs": []
